remove spaces in fromt of dots

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,11 @@
   </div>
   <div fxHide.lt-md fxFlex="60">
     <div fxFlex="70" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end center">
+      <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank" class="button-hover"
+         mat-icon-button
+         aria-label="Example icon-button with share icon">
+        <fa-icon [icon]="Gscholar"></fa-icon>
+      </a>
       <a href="https://github.com/HannesStark" target="_blank" class="button-hover" mat-icon-button
          aria-label="Example icon-button with share icon">
         <fa-icon [icon]="github"></fa-icon>
@@ -48,21 +53,26 @@
     </a>
   </div>
   <div fxHide.gt-sm fxFlex="50" fxLayout="row" fxLayoutGap.gt-xs="10px" fxLayoutAlign="end center">
+    <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank" class="button-hover"
+       mat-icon-button
+       aria-label="Example icon-button with share icon">
+      <fa-icon [icon]="Gscholar"></fa-icon>
+    </a>
     <a href="https://github.com/HannesStark" target="_blank" class="button-hover" mat-icon-button
-         aria-label="Example icon-button with share icon">
-        <fa-icon [icon]="github"></fa-icon>
-      </a>
-      <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank" class="button-hover" mat-icon-button
-         aria-label="icon-button icon">
-        <fa-icon [icon]="linkedin"></fa-icon>
-      </a>
-      <a href="https://twitter.com/HannesStaerk" target="_blank" class="button-hover" mat-icon-button
-         aria-label="icon-button icon">
-        <fa-icon [icon]="twitter"></fa-icon>
-      </a>
-      <a href="mailto:hannes.staerk@gmail.com" class="button-hover" mat-icon-button aria-label="icon-button icon">
-        <fa-icon [icon]="mail"></fa-icon>
-      </a>
+       aria-label="Example icon-button with share icon">
+      <fa-icon [icon]="github"></fa-icon>
+    </a>
+    <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank" class="button-hover" mat-icon-button
+       aria-label="icon-button icon">
+      <fa-icon [icon]="linkedin"></fa-icon>
+    </a>
+    <a href="https://twitter.com/HannesStaerk" target="_blank" class="button-hover" mat-icon-button
+       aria-label="icon-button icon">
+      <fa-icon [icon]="twitter"></fa-icon>
+    </a>
+    <a href="mailto:hannes.staerk@gmail.com" class="button-hover" mat-icon-button aria-label="icon-button icon">
+      <fa-icon [icon]="mail"></fa-icon>
+    </a>
   </div>
 </mat-toolbar>
 <!--For when there are more buttons-->
