--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -28,6 +28,10 @@
           </p>
 
           <div fxLayout="row" fxLayout.xs="column">
+            <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank" class="socials-links link-style-black text-black">
+              <fa-icon class="link-icon-style-green" [icon]="Gscholar"></fa-icon>
+              Google Scholar
+            </a>
             <a href="https://github.com/HannesStark" target="_blank" class="socials-links link-style-black text-black">
               <fa-icon class="link-icon-style-green" [icon]="github"></fa-icon>
               GitHub
@@ -100,12 +104,10 @@
                 </a>
                 and the
                 <a href="https://mlpcp21.github.io/index.html" target="_blank"
-                   class="link-style-green">ICLR 2021 Machine Learning for Preventing and Combating Pandemics Workshop
-                </a>.
+                   class="link-style-green">ICLR 2021 Machine Learning for Preventing and Combating Pandemics Workshop</a>.
                 Currently under review for
                 <a href="https://icml.cc/" target="_blank"
-                   class="link-style-green">ICML 2021
-                </a>.
+                   class="link-style-green">ICML 2021</a>.
               </p>
             </div>
           </div>
@@ -606,8 +608,7 @@
                 </a> or have a look at the
                 <a href="https://github.com/HannesStark/bachelorThesis" target="_blank"
                    class="link-style-green">code
-                  <fa-icon class="link-icon-style-green" [icon]="github"></fa-icon>
-                </a>.
+                  <fa-icon class="link-icon-style-green" [icon]="github"></fa-icon></a>.
 
               </p>
             </div>
