--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -263,6 +263,26 @@
         </div>
         <div fxFlex="60">
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <a class="item-title">Self-Supervised learning on Proteins</a>
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-black" href="https://icml-compbio.github.io/" target="_blank">
+                    ICML 2021 Workshop on Computational Biology</a></h3>
+              </div>
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                July 2021
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  remote
+                </a>
+              </p>
+              <p class="item-content">16 minutes contributed talk on attention patterns in protein language models and their embeddings for downstream predictions.
+              </p>
+            </div>
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Pretrained Language Models for Protein Prediction</a>
               <div fxLayout="row">
@@ -278,7 +298,7 @@
                   Remote
                 </a>
               </p>
-              <p class="item-content">About Protein Language models and how to most efficiently leverage their
+              <p class="item-content">20 minutes talk about Protein Language models and how to most efficiently leverage their
                 representations.
               </p>
             </div>
@@ -288,20 +308,21 @@
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-black" href="https://mlpcp21.github.io/index.html" target="_blank">
-                    ICLR 2021 MLPCP</a></h3>
+                    ICLR 2021 MLPCP Workshop</a></h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                May 2019 - Sept 2019
+                May 2021
                 <a fxHide.xs>
                   <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
-                  Munich, Germany
+                  remote
                 </a>
               </p>
-              <p class="item-content">Presented work on learning protein representations for downstream predictions such
+              <p class="item-content">15 minutes talk where I presented our work on learning protein representations for downstream predictions such
                 as state-of-the-art subcellular localization prediction.
               </p>
             </div>
+
 
           </div>
         </div>
