--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar fxLayout="row" fxLayoutAlign="center center">
+<mat-toolbar fxHide.xs fxLayout="row" fxLayoutAlign="center center">
   <div fxHide.lt-md fxFlex="30" fxLayoutAlign="end center">
     <button #tooltip="matTooltip" mat-button
             matTooltip="My personal information"
@@ -8,10 +8,18 @@
     </button>
     <a href="/assets/CV_Hannes_Stark.pdf" target="_blank" #tooltip="matTooltip"
        mat-button
-       matTooltip="Get my CV as PDF document"
+       matTooltip="Download my CV as PDF document"
        class="mat-button">
       CV as PDF
     </a>
+    <a #tooltip="matTooltip"
+     href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit"
+     target="_blank"
+     mat-button
+     matTooltip="The Learning on Graphs and Geometry Reading Group"
+     class="mat-button">
+    Reading Group
+  </a>
   </div>
   <div fxHide.lt-md fxFlex="60">
     <div fxFlex="70" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end center">
@@ -35,6 +43,7 @@
       <a href="mailto:hannes.staerk@gmail.com" class="button-hover" mat-icon-button aria-label="icon-button icon">
         <fa-icon [icon]="mail"></fa-icon>
       </a>
+
     </div>
   </div>
   <div fxHide.gt-sm fxFlex="50" fxLayoutAlign="start center">
@@ -47,10 +56,18 @@
     <a #tooltip="matTooltip"
        (mousedown)="pdf($event, '/assets/CV_Hannes_Stark.pdf')"
        mat-button
-       matTooltip="Get my CV as PDF document"
+       matTooltip="Download my CV as PDF document"
        class="mat-button">
       CV as PDF
     </a>
+    <a #tooltip="matTooltip"
+     href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit"
+     target="_blank"
+     mat-button
+     matTooltip="The Learning on Graphs and Geometry Reading Group"
+     class="mat-button">
+    Reading Group
+  </a>
   </div>
   <div fxHide.gt-sm fxFlex="50" fxLayout="row" fxLayoutGap.gt-xs="10px" fxLayoutAlign="end center">
     <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank" class="button-hover"
@@ -76,43 +93,54 @@
   </div>
 </mat-toolbar>
 <!--For when there are more buttons-->
-<!--
+
 <mat-toolbar class="smaller" fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
 
   <button #tooltip="matTooltip" mat-button
-            matTooltip="My personal information"
-            [routerLink]="" class="mat-button"
-            (mousedown)="home($event)">
-            Home
-    </button>
-    <a #tooltip="matTooltip"
-            (mousedown)="pdf($event, '/assets/CV_Hannes_Stark.pdf')"
-            mat-button
-            matTooltip="Get my CV as PDF document"
-            class="mat-button">
-      CV as PDF
-    </a>
+          matTooltip="My personal information"
+          [routerLink]="" class="mat-button"
+          (mousedown)="home($event)">
+    Home
+  </button>
+  <a #tooltip="matTooltip"
+     (mousedown)="pdf($event, '/assets/CV_Hannes_Stark.pdf')"
+     mat-button
+     matTooltip="Download my CV as PDF document"
+     class="mat-button">
+    CV as PDF
+  </a>
+  <a #tooltip="matTooltip"
+     href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit"
+     target="_blank"
+     mat-button
+     matTooltip="The Learning on Graphs and Geometry Reading Group"
+     class="mat-button">
+    Reading Group
+  </a>
 </mat-toolbar>
 <mat-toolbar class="smaller" fxHide.gt-xs fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center center">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
-          (mousedown)="goToLink($event, 'https://github.com/HannesStark')">
-    <fa-icon class="icon" [icon]="github"></fa-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
-          (mousedown)="goToLink($event, 'https://www.linkedin.com/in/hannes-stark/')">
-    <fa-icon class="icon" [icon]="linkedin"></fa-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
-          (mousedown)="goToLink($event, 'https://twitter.com/HannesStaerk')">
-    <fa-icon class="icon" [icon]="twitter"></fa-icon>
-  </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon"
-          (mousedown)="goToPage($event, 'mailto:hannes.staerk@gmail.com')">
-    <fa-icon class="icon" [icon]="mail"></fa-icon>
-  </button>
+  <a href="https://scholar.google.com/citations?user=bnXfJdEAAAAJ" target="_blank" class="small-button-hover"
+     mat-icon-button
+     aria-label="Example icon-button with share icon">
+    <fa-icon [icon]="Gscholar"></fa-icon>
+  </a>
+  <a href="https://github.com/HannesStark" target="_blank" class="small-button-hover" mat-icon-button
+     aria-label="Example icon-button with share icon">
+    <fa-icon [icon]="github"></fa-icon>
+  </a>
+  <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank" class="small-button-hover" mat-icon-button
+     aria-label="icon-button icon">
+    <fa-icon [icon]="linkedin"></fa-icon>
+  </a>
+  <a href="https://twitter.com/HannesStaerk" target="_blank" class="small-button-hover" mat-icon-button
+     aria-label="icon-button icon">
+    <fa-icon [icon]="twitter"></fa-icon>
+  </a>
+  <a href="mailto:hannes.staerk@gmail.com" class="small-button-hover" mat-icon-button aria-label="icon-button icon">
+    <fa-icon [icon]="mail"></fa-icon>
+  </a>
 </mat-toolbar>
 
--->
 
 
 
