add reading group page

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -15,17 +15,18 @@
           <p class="text-align-left">
             Hi! I am a M. Sc. Computer Science student at TU Munich.
             <br>
-            My current research is on self-supervised learning for molecular graphs under Prof. Pietro Liò at Cambridge
-            and Prof. Stephan Günnemann at TUM.
+            My current research is on self-supervised learning for molecular graphs under Prof. <a href="https://www.cl.cam.ac.uk/~pl219/" target="_blank" class="link-style-green">Pietro Liò</a> at Cambridge
+            and Prof. <a href="https://www.professoren.tum.de/en/guennemann-stephan" target="_blank" class="link-style-green">Stephan Günnemann</a> at TUM.
             My main interests are graph representation learning, symmetry-aware architectures, and self-supervised
             learning.
             <br>
-            From the experiences of my dual study program and through several
-            <a (click)="scroll('projects')" class="link-style-green">projects</a>,
-            I found my passion for
-            research and am now working to pursue a career in that area.
+            I am extremely grateful to the ML community and my great supervisors that helped me in my research
+            <a (click)="scroll('projects')" class="link-style-green">projects</a>
+            through which I found my passion for research.
             <br>
-            Feel free to contact me about anything in whatever way you prefer:
+            Consider joining my <a href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit" target="_blank" class="link-style-green">reading group</a> about learning on graphs and geometry!
+            <br>
+            I am always happy to chat about research or anything else! So feel free to contact me:
           </p>
 
           <div fxLayout="row" fxLayout.xs="column">
