add slack to reading group

--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -13,17 +13,19 @@
         -->
         <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
-            Welcome to the LoGaG reading group that I am organizing with the incredible support of my supervisor Prof.
+            Welcome to the LoGaG reading group that I am organizing with the incredible support of Prof.
             <a
-              href="https://www.cl.cam.ac.uk/~pl219/" target="_blank" class="link-style-green">Pietro Liò</a>. A
-            thousand thanks to him and the Cambridge Computer Laboratory!
+              href="https://www.cl.cam.ac.uk/~pl219/" target="_blank" class="link-style-green">Pietro Liò</a>!
           </p>
           <p>
-            We use this <a href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit"
+            You can find the schedule, past presentations, and paper notes in this <a href="https://docs.google.com/document/d/1RbV-8csUdIMCBntS5pXBwHel6LvqpaDQWy5w29YISHI/edit"
                            target="_blank"
-                           class="link-style-green">google doc</a>
-            to vote for papers and there you can also find all
-            upcoming + past presentations as well as paper suggestions.
+                           class="link-style-green">Google Doc</a>.
+          </p>
+          <p>
+            For discussions outside of our meetings and to vote for papers please join this <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg"
+                           target="_blank"
+                           class="link-style-green">Slack Workspace</a>.
           </p>
           <p>
             We meet every Tuesday at 5pm CEST / 3pm UTC / 11am EST / 8am PST in this <a
@@ -81,7 +83,7 @@
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <div fxLayout="row">
                 <h3>
-                  <a class="item-title">Get weekly updates with all information via email!</a></h3>
+                  <a class="item-title">Get weekly updates with the next paper and all other information via email!</a></h3>
               </div>
               <div class="item-content">
                 <form
