move to formcarry instead

--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -87,8 +87,9 @@
               </div>
               <div class="item-content">
                 <form
-                  action="https://formspree.io/f/mqkwyejz"
+                  action="https://formcarry.com/s/xejfAa3AVBs"
                   method="POST"
+                  accept-charset="UTF-8"
 
                 >
                   <div fxLayout="column">
